# Plant-Propagation-

./: .gitignore  DESIGN_HANDOFF.md  DEVELOPMENT_PLAN.md  HANDOFF.md  README.md  pyproject.toml  render.yaml
app/: claude.py  db.py  main.py  models.py  plantid.py
app/static/: app.js  design-concept.html  index.html  manifest.json  sw.js
