[project]
name = "prop-app"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "anthropic>=0.40",
    "httpx>=0.28",
    "pydantic>=2.10",
    "python-multipart>=0.0.18",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
